starting the process to list all clases for a logged in user, fixed layout overflow for top menu and main menu

--- a/web/src/main/webapp/skins/respurriki/css/app.css
+++ b/web/src/main/webapp/skins/respurriki/css/app.css
@@ -284,12 +284,16 @@ Content
     position: relative;
     z-index: 100;
 }
+/*
 .navbar{
     z-index: 50;
 }
+*/
 #top-header{
     background-color: #29a3ce;
     border-bottom: 1px solid #fff;
+    z-index: 3700;
+    position: relative;
 }
 #the-header .navbar #curriki-navbar-collapse-1{
     padding-left: 0px;
@@ -350,6 +354,12 @@ h2#course-title{
     text-align: left;
 }
 
+#curriki-primary-menu{
+    z-index: 3500;
+}
+#menuview{
+    z-index: 4500;
+}
 /* responsive behaviour */
 @media(max-width:500px){
     h2#course-title{
